# nba_hustle_sdg

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Net_Rating_Models.ipynb  four_factor_models.ipynb  hustle_and_boxscore.ipynb  nba_api_scratch.ipynb  nba_sdg.ipynb  off_def_rating_models.ipynb  py_ball_scratch.ipynb
src/: constants.py
src/steps/evaluation/: utils_evaluation.py
src/steps/ingest/: ingest.py  ingest_v2.py  process_data.py  process_logs.py  utils_ingest
src/steps/model/: model.py
src/steps/transform/: transform.py  utils_transform.py
